# solution-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: PrecompiledHeader.cmake  Utils.cmake  cmake_helper.cmake  compile_options.cmake  project_depends.cmake  project_variables.cmake  vcpkg_config.cmake
cmake/depends/: qt_depends.cmake  third_party_depends.cmake
cmake/options/: options_linux.cmake  options_mac.cmake  options_win.cmake
